Updates peer dep requirements

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mmtdigital/eslint-config",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "MMT Digital's base ESLint config",
   "keywords": [
     "mmt",
@@ -19,19 +19,19 @@
   },
   "main": "index.js",
   "devDependencies": {
-    "eslint": "5.0.0-alpha.2",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1"
   },
   "peerDependencies": {
-    "eslint": ">=5.0.0-alpha.2",
-    "eslint-plugin-import": ">=2.8.0",
-    "eslint-plugin-node": ">=5.2.1",
+    "eslint": ">=5.8.0",
+    "eslint-plugin-import": ">=2.14.0",
+    "eslint-plugin-node": ">=6.0.0",
     "eslint-plugin-promise": ">=3.6.0",
     "eslint-plugin-standard": ">=3.0.1",
-    "babel-eslint": "^9.0.0"
+    "babel-eslint": "^10.0.1"
   },
   "scripts": {
     "lint": "eslint ."
