--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "npmpub": "^4.1.0"
   },
   "peerDependencies": {
     "eslint": ">=5.8.0",
@@ -34,7 +35,9 @@
     "babel-eslint": "^10.0.1"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dry-release": "npmpub --dry --verbose --no-release",
+    "release": "npmpub --no-release"
   },
   "dependencies": {
     "babel-eslint": "^9.0.0"
