--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-jest": "^22.4.1",
     "npmpub": "^4.1.0"
   },
   "peerDependencies": {
@@ -34,6 +35,7 @@
     "eslint-plugin-promise": ">=3.6.0",
     "eslint-plugin-standard": ">=3.0.1",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-jest": "^22.4.1",
     "babel-eslint": "^10.0.1"
   },
   "scripts": {
